dist/entities/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microservice-ingress
  namespace: microservices-namespace
  labels:
    moduleid: microservice-realm
    version: 1.70.0-master
    last_updated: CHANGE_TO_UNIXTS
spec:
  tls:
    - hosts:
        - www.repoflow.com
      secretName: certificates-secret
  rules:
    - host: www.repoflow.com
      http:
        paths:
          - path: /resources
            backend:
              serviceName: resources-web-service
              servicePort: 3000
          - path: ${BASE_ROUTE_BACKEND@microservice-auth-config}
            backend:
              serviceName: ${SERVICE_GRAPH@microservice-auth-config}
              servicePort: ${INTERNAL_PORT_GRAPH@microservice-auth-config}
          - path: ${BASE_ROUTE_APP@microservice-auth-config}
            backend:
              serviceName: ${SERVICE_WEB@microservice-auth-config}
              servicePort: ${INTERNAL_PORT_APP@microservice-auth-config}
          - path: /blog/backend
            backend:
              serviceName: blog-graph-service
              servicePort: 4000
          - path: /blog
            backend:
              serviceName: blog-web-service
              servicePort: 3000
          - path: ${BASE_ROUTE_BACKEND@microservice-home-config}
            backend:
              serviceName: ${SERVICE_GRAPH@microservice-home-config}
              servicePort: ${INTERNAL_PORT_GRAPH@microservice-home-config}
          - path: ${BASE_ROUTE_APP@microservice-home-config}
            backend:
              serviceName: ${SERVICE_WEB@microservice-home-config}
              servicePort: ${INTERNAL_PORT_APP@microservice-home-config}
